2007-02-06  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m: Set pt to 0 if marker is ".".
	* sparse/gplot.m: Use line style - instead of 1.

2007-02-05  Rafael Laboissiere  <rafael@debian.org>

	* plot/print.m: Avoid error message from cellidx.

2007-02-05  John W. Eaton  <jwe@octave.org>

	* plot/legend.m: Fix check for data.

2007-02-05  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* plot/__uiobject_draw_axes__.m (do_linestyle_command):
	Always set lt and pt.

2007-02-05  Shai Ayal  <shaiay@users.sourceforge.net>

	* plot/contourc.m: Correctly compute X and Y.

2007-02-05  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m: Use title "" if no explicit title.
	When setting {x,y,z}lim, also set {x,y,z}limmode to "auto.

2007-02-01  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m:
	Don't try to set axis limits unless we have data.

	*  plot/__plt1__.m, plot/__plt2__.m, plot/__plt2mm__.m,
	plot/__plt2mv__.m, plot/__plt2ss__.m, plot/__plt2vm__.m,
	plot/__plt2vv__.m, plot/__plt__.m, plot/__pltopt1__.m,
	plot/__pltopt__.m, plot/plot3.m: Set and use options struct
	instead of of key and fmt strings.

	* plot/__pltopt1__.m: Greatly simplify.

	* plot/__next_line_color__.m: New file.
	* plot/Makefile.in (SOURCES_M): Add it to the list.
	* plot/newplot.m: Call __next_line_color__ here to reset rotation.

	* plot/__default_plot_options__.m: New file.
	* plot/Makefile.in (SOURCES_M): Add it to the list.

	* plot/__plt3__.m: Delete.
	* plot/Makefile.in (SOURCES_M): Remove it from the list.

2007-01-31  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m: Set defaults for color,
	linestyle, linewidth, marker, and markersize properties.
	* plot/__uiobject_draw_axes__.m: Attempt to handle line and marker
	colors and widths, and line styles.

	* plot/__plt__.m, image/image.m: Don't call drawnow.

	* plot/__gnuplot_version__.m: Restore from CVS Attic.
	* plot/Makefile.in (SOURCES_M): Add it to the list.
